# dnd_person_generator

./: README.md  config.py  main.py  pyproject.toml
bot/: __init__.py
bot/assets/: person.json
bot/configs/: bot_api.py
bot/handlers/: commands.py  create_character.py
bot/keyboards/: inline.py  reply.py
bot/statuses/: status.py
bot/utils/: dnd_api.py  dnd_get.py
settings/: README.md
tests/utils/: dnd.py
