[project]
name = "dnd-person-generator"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "pydantic-settings>=2.9.1",
    "pydentic>=0.0.1.dev3",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]
